@@ -1,5 +1,8 @@
 2009-04-26  Ulrich Drepper  <drepper@redhat.com>
 
+	* sem_open.c (sem_open): Rewrite initialization of initsem to
+	avoid warnings.
+
 	* sysdeps/unix/sysv/linux/libc_pthread_init.c (__libc_pthread_init):
 	Avoid warning by using may_alias attribute on ptrhack.
 
